--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -29,7 +29,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        flake8 geostore test_geostore
+        flake8 vectortiles test_vectortiles
 
   build:
     runs-on: ubuntu-18.04
