--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.6', '3.9']
-        django-version: [2.2.*, 3.2a1]
+        django-version: [2.2.*, 3.2.*]
 
     services:
       postgres:
