--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -11,15 +11,15 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ['3.6']
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -32,12 +32,17 @@ jobs:
         flake8 vectortiles test_vectortiles
 
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: [lint]
     strategy:
       matrix:
-        python-version: ['3.6', '3.9']
-        django-version: [2.2.*, 3.2.*]
+        python-version: ['3.6', '3.10']
+        django-version: ['2.2.*', '3.2.*', "4.1.*'"]
+        exclude:
+          - python-version: '3.10'  # 3.10 is not supported by django 2.2
+            django-version: '2.2.*'
+          - python-version: '3.6'
+            django-version: '4.1.*'  # Django 4.1 supports only python >= 3.8
 
     services:
       postgres:
@@ -49,9 +54,9 @@ jobs:
         ports:
           - 5432:5432
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
