--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.6', '3.10']
-        django-version: ['2.2.*', '3.2.*', "4.1.*'"]
+        django-version: ['2.2.*', '3.2.*', '4.1.*']
         exclude:
           - python-version: '3.10'  # 3.10 is not supported by django 2.2
             django-version: '2.2.*'
