--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,7 +38,7 @@ jobs:
       matrix:
         python-version: ['3.6', '3.10']
         django-version: ['2.2.*', '3.2.*', '4.1.*']
-        postgis-image: 'postgis:10-2.5'
+        postgis-image: 'postgis/postgis:10-2.5'
         exclude:
           - python-version: '3.10'  # 3.10 is not supported by django 2.2
             django-version: '2.2.*'
