improve code quality and documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,11 @@
-[report]
+[flake8]
+ignore = E501,W504
+exclude = test_vectortiles/settings*
+
+[isort]
+profile=black
+
+[coverage:report]
 omit =
     */tests*
     */migrations*
@@ -8,3 +15,4 @@ omit =
     manage.py
 
 ignore_errors = true
+
