--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -9,32 +9,52 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        python-version: ['3.6']
+  flake8:
+    runs-on: ubuntu-latest
+    container:
+      image: python:3.6
+      env:
+        LANG: C.UTF-8
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install flake8
+        run: |
+          pip install flake8
+
+      - name: Check
+        run: |
+          flake8 vectortiles test_vectortiles
+
+  isort:
+    runs-on: ubuntu-latest
+    container:
+      image: python:3.6
+      env:
+        LANG: C.UTF-8
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v3
+      - name: Install isort
+        run: |
+          pip install isort
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 isort black
+      - name: Check
+        run: |
+          isort -c vectortiles test_vectortiles
 
-    - name: Lint with flake8
-      run: |
-        flake8 vectortiles test_vectortiles
+  black:
+    runs-on: ubuntu-latest
+    container:
+      image: python:3.6
+      env:
+        LANG: C.UTF-8
 
-    - name: Check with isort
-      run: |
-        isort -c vectortiles test_vectortiles
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install black
+        run: |
+          pip install black
 
-    - name: Check with black
-      run: |
-        black --check vectortiles test_vectortiles
+      - name: Check
+        run: |
+          black --check vectortiles test_vectortiles
