--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -9,31 +9,8 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        python-version: ['3.6']
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        flake8 vectortiles test_vectortiles
-
-  build:
-    runs-on: ubuntu-20.04
-    needs: [lint]
     strategy:
       matrix:
         python-version: ['3.6', '3.10']
