--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python / Django matrix test
+name: Unit tests
 
 on:
   push:
@@ -15,17 +15,18 @@ jobs:
       matrix:
         python-version: ['3.6', '3.10']
         django-version: ['2.2.*', '3.2.*', '4.1.*']
-        postgis-image: ['postgis/postgis:latest']
+        postgis-image: ['postgis/postgis:10-2.5', 'postgis/postgis:11-2.5', 'postgis/postgis:latest']
         exclude:
           - python-version: '3.10'  # 3.10 is not supported by django 2.2
             django-version: '2.2.*'
+          - postgis-image: 'postgis/postgis:11-2.5'
+            django-version: '2.2.*'  # test only with 10-2.5 and latest
+          - postgis-image: 'postgis/postgis:11-2.5'
+            django-version: '3.2.*'  # test only with 10-2.5 and latest
           - python-version: '3.6'
             django-version: '4.1.*'  # Django 4.1 supports only python >= 3.8
-        include:
-          - django-version: '2.2.*'
-            postgis-image: 'postgis/postgis:10-2.5'
-          - django-version: '3.2.*'
-            postgis-image: 'postgis/postgis:10-2.5'
+          - postgis-image: 'postgis/postgis:10-2.5'
+            django-version: '4.1.*'  # Django 4.1 supports only postgres >= 11
 
     services:
       postgres:
