--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Code quality
+name: Code & doc quality
 
 on:
   push:
@@ -58,3 +58,22 @@ jobs:
       - name: Check
         run: |
           black --check vectortiles test_vectortiles
+
+  doc:
+    runs-on: ubuntu-latest
+    container:
+      image: python:3.6
+      env:
+        LANG: C.UTF-8
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install doc dependencies
+        run: |
+          cd docs
+          pip install -r -U ./requirements.txt
+
+      - name: Check
+        run: |
+          make html SPHINXOPTS="-W"
+
