--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Install doc dependencies
         run: |
           cd docs
-          pip install -r -U ./requirements.txt
+          pip install -r ./requirements.txt -U 
 
       - name: Check
         run: |
