--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-20.04
+    continue-on-error: true
     strategy:
       matrix:
         python-version: ['3.6', '3.10']
