--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -13,13 +13,13 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ['3.7', '3.11']
+        python-version: ['3.7', '3.8', '3.11']
         django-version: ['3.2.*', '4.2.*']
         postgis-image: ['postgis/postgis:10-2.5', 'postgis/postgis:11-2.5', 'postgis/postgis:latest']
         exclude:
           - postgis-image: 'postgis/postgis:11-2.5'
             django-version: '3.2.*'  # test only with 10-2.5 and latest
-          - python-version: '3.6'
+          - python-version: '3.7'
             django-version: '4.2.*'  # Django 4.2 supports only python >= 3.8
           - postgis-image: 'postgis/postgis:10-2.5'
             django-version: '4.2.*'  # Django 4.2 supports only postgres >= 12
