--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,11 +21,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install setuptools wheel twine -U
-      - name: Build and publish
+          python -m pip install setuptools wheel -U
+
+      - name: Build packages
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          python setup.py sdist
-          twine upload dist/*
+          python setup.py sdist bdist_wheel
+
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
