--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,7 +7,10 @@ on:
   release:
     types: [created]
   workflow_dispatch:
-    
+
+permissions:
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
