--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - postgis-image: 'postgis/postgis:latest'
             django-version: '4.2.*'
+            python-version: '3.11'
             psycopg: ['psycopg-binary']
 
     services:
@@ -59,7 +60,7 @@ jobs:
         if [[ ${{ matrix.psycopg }} == psycopg-binary ]]; then
           pip uninstall psycopg2-binary;
         else
-          pip install ${{ matrix.psycopg }} -U;
+          pip install psycopg2-binary -U;
         fi
 
     - name: Run migrations
