--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       LANG: C.UTF-8
       SECRET_KEY: secret-for-ci-only
+      POSTGRES_HOST: localhost
       POSTGRES_PASSWORD: ci_test
       POSTGRES_USER: ci_test
       POSTGRES_DB: ci_test
