drop django 3.2 and add 5.1 in CI

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -29,6 +29,9 @@ jobs:
           - python-version: '3.8'
             django-version: '5.1.*'
             postgis-image: 'postgis/postgis:12-2.5'
+          - python-version: '3.12'
+            django-version: '5.1.*'
+            postgis-image: 'postgis/postgis:12-2.5'
           - python-version: '3.8'
             django-version: '5.1.*'
             postgis-image: 'postgis/postgis:latest'
